--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                 PLAYER- 
                 <div id="pl-no">1</div>
             </div>
-            <div class="player-img">
+            <svg class="player-img" >
+                <rect  rx="5" ry="5" class="dash0"
+                style="fill:none;" />
 
-            </div>
+            </svg>
         </div>
         <div class="box">
             <div class="big-row" onmouseover="big_row(0)">
